--- a/website.html
+++ b/website.html
@@ -14,6 +14,7 @@
             align-items: center;
             height: 100vh;
             background-color: #f4f4f4;
+            text-align: center;
         }
         .container {
             background: #fff;
@@ -21,7 +22,9 @@
             border-radius: 8px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             width: 400px;
-            text-align: center;
+            max-width: 90%;
+            overflow: hidden;
+            transition: width 0.5s ease;
         }
         input[type="url"] {
             width: 100%;
@@ -48,11 +51,13 @@
             padding: 10px;
             border-radius: 4px;
             border: 1px solid #ddd;
+            max-height: 300px;
+            overflow-y: auto;
         }
     </style>
 </head>
 <body>
-    <div class="container">
+    <div class="container" id="container">
         <h1>YouTube Video Summarizer</h1>
         <form id="summarizerForm">
             <input type="url" id="youtubeLink" placeholder="Enter YouTube Link" required style="padding-right: 0px !important;">
@@ -64,6 +69,7 @@
     <script>
         const form = document.getElementById('summarizerForm');
         const summaryDiv = document.getElementById('summary');
+        const container = document.getElementById('container');
 
         form.addEventListener('submit', async (e) => {
             e.preventDefault();
@@ -77,13 +83,14 @@
                     },
                     body: JSON.stringify({ url: youtubeLink }),
                 });
-                
 
                 if (!response.ok) {
                     throw new Error('Failed to fetch the summary');
                 }
 
                 const data = await response.json();
+                
+                container.style.width = '1000px';
                 summaryDiv.style.display = 'block';
                 summaryDiv.innerText = data.summary;
             } catch (error) {
