changed chronological summary to key points

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </form>
         <div id="summary" class="summary">
             <div id="descriptionSection" class="section"></div>
-            <div id="chronologicalSummarySection" class="section"></div>
+            <div id="keyPointsSection" class="section"></div>
         </div>
     </div>
     <script src="script.js"></script>
