--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         </div>
     </div>
     <script src="script.js"></script>
+    <script src="https://unpkg.com/lucide@latest"></script>
 </body>
 </html>
 
