updated error handling

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
             <div id="keyPointsSection" class="section"></div>
         </div>
     </div>
+    <div id="contactFooter" style="display: none; text-align: center; padding: 20px; width: 100%; position: absolute; bottom: 0; left: 0;">
+        <a href="https://www.linkedin.com/in/ryankrohne/" target="_blank" style="color: #007bff; text-decoration: underline; font-weight: bold;">
+            Something went wrong? Let me know.
+        </a>
+    </div>
     <script src="script.js"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
 </body>
