--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/Youtube-Summarizer/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/Youtube-Summarizer/favicon-16x16.png">
     <link rel="manifest" href="/Youtube-Summarizer/site.webmanifest">
+    <link rel="stylesheet" href="https://unpkg.com/intro.js/minified/introjs.min.css">
+    <script src="https://unpkg.com/intro.js/minified/intro.min.js"></script>
 
 </head>
 <body>
