vercel sucks sometimes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YouTube Summarizer</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css">
     <link rel="apple-touch-icon" sizes="180x180" href="/Youtube-Summarizer/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/Youtube-Summarizer/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/Youtube-Summarizer/favicon-16x16.png">
@@ -31,7 +31,7 @@
             Something went wrong? Let me know.
         </a>
     </div>
-    <script src="script.js"></script>
+    <script src="/script.js"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
 </body>
 </html>
