--- a/index.html
+++ b/index.html
@@ -5,20 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YouTube Summarizer</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="apple-touch-icon" sizes="180x180" href="/Youtube-Summarizer/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/Youtube-Summarizer/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/Youtube-Summarizer/favicon-16x16.png">
-    <link rel="manifest" href="/Youtube-Summarizer/site.webmanifest">
+    <link rel="stylesheet" href="./styles.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+    <link rel="manifest" href="./site.webmanifest">
     <link rel="stylesheet" href="https://unpkg.com/intro.js/minified/introjs.min.css">
     <script src="https://unpkg.com/intro.js/minified/intro.min.js"></script>
-    <script>
-        if (location.hostname.includes('vercel.app')) {
-            const base = document.createElement('base');
-            base.href = '/';
-            document.head.appendChild(base);
-        }
-    </script>
 </head>
 <body>
     <div class="container" id="container"> 
@@ -37,7 +30,7 @@
             Something went wrong? Let me know.
         </a>
     </div>
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
 </body>
 </html>
