--- a/404.html
+++ b/404.html
@@ -1,16 +1,8 @@
+<!-- 404.html -->
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8" />
-  <title>Redirecting...</title>
-  <script>
-    // Get the current path after the domain
-    const path = window.location.pathname + window.location.search + window.location.hash;
-    // Redirect to your index.html with the original path as a hash route (using #!)
-    window.location.replace('/');
-  </script>
-</head>
-<body>
-  Redirecting...
-</body>
+  <head>
+    <meta http-equiv="refresh" content="0; url=/" />
+  </head>
+  <body></body>
 </html>
