--- a/404.html
+++ b/404.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=/Youtube-Summarizer/" />
+    <meta charset="UTF-8" />
+    <title>Page Not Found</title>
+    <script>
+      const basePath = '/Youtube-Summarizer';
+      const path = window.location.pathname;
+      window.location.replace(`${basePath}/?redirect=${encodeURIComponent(path)}`);
+    </script>
   </head>
   <body></body>
 </html>
