--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>YouTube Summarizer</title>
     
-    <base href="/" />
+    <script>
+        if (location.hostname === "ryan-krohne.github.io") {
+          const base = document.createElement('base');
+          base.href = "/Youtube-Summarizer/";
+          document.head.appendChild(base);
+        }
+      </script>
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="styles.css" />
