--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
       </script>
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="/styles.css" />
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="stylesheet" href="styles.css" /> <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     <link rel="manifest" href="site.webmanifest" />
@@ -41,7 +40,7 @@
         </a>
     </div>
 
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
 </body>
 </html>
