--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         const isGitHubPages = window.location.pathname.includes('/Youtube-Summarizer/');
         const baseURL = isGitHubPages ? '/Youtube-Summarizer/' : '/';
         console.log("BaseURL:", baseURL)
+        document.write(`<base href="${baseURL}">`);
     </script>
     
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
