--- a/404.html
+++ b/404.html
@@ -5,12 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>YouTube Summarizer</title>
 
-    <script>
-        const isGitHubPages = window.location.pathname.includes('/Youtube-Summarizer/');
-        const baseURL = isGitHubPages ? '/Youtube-Summarizer/' : '/';
-        console.log("BaseURL:", baseURL)
-        document.write(`<base href="${baseURL}">`);
-    </script>
+    <base href="/Youtube-Summarizer/"> 
     
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="styles.css" />
