commented out logging

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script>
         const isGitHubPages = window.location.pathname.includes('/Youtube-Summarizer/');
         const baseURL = isGitHubPages ? '/Youtube-Summarizer/' : '/';
-        console.log("BaseURL:", baseURL)
+        //console.log("BaseURL:", baseURL)
         document.write(`<base href="${baseURL}">`);
     </script>
     
