ui changes (might break everything idk)

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
     <script src="https://unpkg.com/intro.js/minified/intro.min.js"></script>
 </head>
 <body>
+    <a href="/" class="logo-link">
+        <img src="android-chrome-192x192.png" alt="Home" class="logo" />
+      </a>
+      
     <div class="container" id="container">
         <h1>YouTube Summarizer</h1>
         <form id="summarizerForm">
