changes for responsiveness

--- a/index.html
+++ b/index.html
@@ -88,18 +88,21 @@
         </div>
 
         <section id="popularVideosSection">
-            <h2 style="text-align: center;">Popular Videos</h2>
-            <ul id="popular-videos-list" style="
-                display: flex;
-                flex-wrap: wrap;
-                gap: 16px;
-                list-style: none;
-                padding: 0;
-                justify-content: flex-start;
-                width: 768px;
-                margin: 0 auto;
-            ">
-        </section>
+    <h2 style="text-align: center;">Popular Videos</h2>
+    <ul id="popular-videos-list" style="
+        display: flex;
+        flex-wrap: wrap;
+        gap: 16px;
+        list-style: none;
+        padding: 0;
+        justify-content: center; /* Center the items */
+        width: 100%;
+        max-width: 768px;
+        margin: 0 auto;
+        box-sizing: border-box;
+    ">
+</section>
+
 
 
         <script src="script.js"></script>
